<resources>
    <string name="app_name">Lista de Livros</string>
    <string name="registro_com_google">Registro com Google</string>
    <string name="login_com_google">Login com Google</string>

    <string name="user_created_success">Usuário criado com sucesso. Verifique sua caixa de e-mail.</string>
    <string name="email_registered">Email já cadastrado.</string>
    <string name="erro_create_user">Erro ao criar usuário.</string>
    <string name="password_inadequate_length">As senhas são iguais mas de tamanho inadequado.</string>
    <string name="passwords_not_match">As senhas não coincidem.</string>
    <string name="fill_all_fields">Preencha todos os campos.</string>
    <string name="email_success_sent">E-mail enviado com sucesso.</string>
    <string name="login_success">Logado com sucesso.</string>
    <string name="login_failed">Falha ao logar.</string>
    <string name="check_your_email">Verifique seu email.</string>
    <string name="nao_tem_conta">Não tem uma conta? Cadastre-se</string>
    <string name="forgot_my_password">Esqueci minha senha</string>
    <string name="entrar_com_google">Entrar com Google</string>
    <string name="senha_alterada">Senha alterada com sucesso!</string>
    <string name="campo_email_vazio">Preencha o campo de email.</string>
    <string name="campo_senha_vazio">Preencha o campo da senha.</string>
    <string name="email_enviado_suceso">Email enviado com sucesso!</string>

    <string name="titulo_task_field">Título</string>
    <string name="btn_select_date">Data</string>
    <string name="btn_select_hour">Hora</string>
    <string name="salvar">Salvar</string>
    <string name="email_invalido">E-mail inválido.</string>
    <string name="titulo_do_livro">Título do livro</string>
    <string name="generos">Gêneros</string>
    <string name="livro_criado_sucesso">Livro criado com sucesso!</string>
    <string name="numero_de_paginas">Número de páginas</string>
    <string name="permissao_galeria_negada">Permissão de galeria negada</string>
    <string name="permissao_galeria_concedida">Permissão de galeria concedida</string>
    <string name="permissao_camera_negada">Permissão de camera negada</string>
    <string name="permissao_camera_concedida">Permissão de camera concedida</string>
    <string name="falha_atualizar_perfil">Falha ao atualizar perfil</string>
    <string name="perfil_atualizado_sucesso">Perfil atualizado com sucesso</string>
    <string name="falha_salvar_imagem">Falha ao salvar imagem</string>
    <string name="registrar">Registrar</string>
    <string name="email">E-mail*</string>
    <string name="senha">Senha*</string>
    <string name="confirmar_senha">Confirmar senha*</string>
    <string name="entrar">Entrar</string>
    <string name="registrar_com_google">Registrar com Google</string>
    <string name="ler_ate">Ler até</string>
    <string name="nao_lido_var">Não lido: %1$s</string>
    <string name="lido_var">Lido: %1$s</string>
    <string name="nao_lido">Não lido</string>
    <string name="lido">Lido</string>
    <string name="minha_biblioteca">Minha Biblioteca</string>
    <string name="email_profile">E-mail</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="atualizar_perfil">Atualizar Perfil</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="enviar">Enviar</string>
    <string name="senha_profile">Senha</string>
    <string name="confirmar_senha_profile">Confirmar Senha</string>
    <string name="trocar_senha">Trocar Senha</string>
    <string name="cadastrar_livro">Cadastrar Livro</string>
    <string name="preferencia_de_generos">Preferência de gêneros</string>
    <string name="erro_carregar_livros">Erro ao carregar lista de livros</string>
    <string name="total_livros">Total de livros</string>
    <string name="perfil_criado_sucesso">Perfil criado com sucesso!</string>
    <string name="erro_carrega_perfil">Erro ao carregar perfil</string>
    <string name="erro_atualizar_livro">Erro ao atualizar livro</string>
    <string name="livro_atualizado_suceso">Livro atualizado com sucesso</string>
    <string name="todos">Todos</string>
    <string name="todos_livros">Todos os livros</string>
    <string name="livros_lidos">Livros lidos</string>
    <string name="livros_nao_lidos">Livros não lidos</string>
    <string name="senha_invalida">Senha inválida</string>
    <string name="senha_fraca">Senha fraca</string>
    <string name="senha_media">Senha média</string>
    <string name="senha_forte">Senha forte</string>
    <string name="email_valido">E-mail válido</string>
    <string name="livro_preeencher_campos">Favor preencher todos os campos para cadastrar o livro.</string>
    <string name="notification_titulo">Previsão de leitura termina hoje!</string>
    <string name="notification_mensagem">Caso não terminou a leitura do %1$s, altere a data de previsão.</string>
    <string name="deletar_livro">Deletar livro</string>
    <string name="deseja_deletar_livro">Deseja deletar o %1$s?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="livro_deletado_sucesso">Livro deletado com sucesso!</string>
    <string name="erro_deletar_livro">Erro ao deletar livro!</string>
    <string name="genero_livro">Gênero: %1$s</string>
    <string name="numero_pagina_livro">Número de páginas: %1$s</string>
    <string name="preencher_campos_senhas">Preencher os dois campos de senhas.</string>
</resources>