<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:chainUseRtl="true"
    tools:ignore="Autofill"
    android:padding="10dp"
    android:background="@drawable/fundo_login"
    tools:context=".view.LoginScreen">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <fragment
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:name="com.benincaza.projetointegracoeskotlin.fragments.VerificaEmailFragment"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSenha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_enter"
        app:layout_constraintEnd_toEndOf="@+id/edt_email"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/outline_key_24"
            android:hint="@string/senha" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:backgroundTint="@color/slateGray"
        app:layout_constraintBottom_toTopOf="@id/txt_esqueci_senha"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutSenha"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutSenha"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSenha"/>

    <TextView
        android:id="@+id/txt_esqueci_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_my_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/txt_register_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_enter" />

    <TextView
        android:id="@+id/txt_register_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nao_tem_conta"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/btn_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_esqueci_senha" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar_com_google"
        android:textColor="@color/white"
        android:padding="10dp"
        android:background="@drawable/button_redondo_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_register_view"
        app:layout_constraintStart_toStartOf="@+id/txt_register_view"
        app:layout_constraintTop_toBottomOf="@+id/txt_register_view" />


</androidx.constraintlayout.widget.ConstraintLayout>