<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:chainUseRtl="true"
    tools:ignore="Autofill"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/fundo_login"
    tools:context=".view.CreateAccount">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:drawableTop="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@id/edt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:name="com.benincaza.projetointegracoeskotlin.fragments.VerificaEmailFragment"
        app:layout_constraintBottom_toTopOf="@id/edt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <fragment
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:name="com.benincaza.projetointegracoeskotlin.fragments.DificuldadeSenhaFragment"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_confirm_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/outline_key_24"
            android:hint="@string/confirmar_senha_profile" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registrar"
        android:backgroundTint="@color/slateGray"
        app:layout_constraintBottom_toTopOf="@id/txt_login_view"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassword"/>

    <TextView
        android:id="@+id/txt_login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@id/btn_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_account" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/registrar_com_google"
        android:textColor="@color/white"
        android:padding="10dp"
        android:background="@drawable/button_redondo_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_login_view"
        app:layout_constraintStart_toStartOf="@+id/txt_login_view"
        app:layout_constraintTop_toBottomOf="@+id/txt_login_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>