<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LivrosActivity">

    <LinearLayout
        android:id="@+id/textArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/dataArea"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTitulo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textInputLayoutGenero"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo_do_livro" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutGenero"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="@id/textInputLayoutTitulo"
            app:layout_constraintStart_toStartOf="@id/textInputLayoutTitulo"
            app:layout_constraintTop_toTopOf="@id/textInputLayoutTitulo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:hint="@string/generos" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        app:layout_constraintEnd_toEndOf="@+id/textArea"
        app:layout_constraintStart_toStartOf="@+id/textArea"
        app:layout_constraintTop_toBottomOf="@+id/textArea"
        android:id="@+id/dataArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:gravity="center">
        <EditText
            android:id="@+id/in_date"
            android:backgroundTint="@color/purple_500"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:enabled="false"
            />
        <Button
            android:id="@+id/btn_date"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/btn_select_date"
            />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintEnd_toEndOf="@+id/dataArea"
        app:layout_constraintStart_toStartOf="@+id/dataArea"
        app:layout_constraintTop_toBottomOf="@+id/dataArea"
        android:id="@+id/horaArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:gravity="center">
        <EditText
            android:id="@+id/in_time"
            android:backgroundTint="@color/purple_500"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:enabled="false"/>
        <Button
            android:id="@+id/btn_time"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/btn_select_hour"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_task"
        android:id="@+id/btn_save_task"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/horaArea"
        app:layout_constraintStart_toStartOf="@+id/horaArea"
        app:layout_constraintTop_toBottomOf="@+id/horaArea"
        />
</androidx.constraintlayout.widget.ConstraintLayout>